--- a/index.html
+++ b/index.html
@@ -1,90 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <title>Projeto_Poke_API</title>
 </head>
+
 <body>
-    <input type="text" id='Nome'/>
-    <button onclick="pokemon()">Buscar</button>
-    <div class="pokemon" id="pokemon">
-         <img id="imagem_personagem" src="" alt="">
-         <h2 id="nome"></h2>
-         <p id="id"></p>
+    <div id="site-grid-container">
+        <div class="area header-grid-item"></div>
+        <div class="area aside-grid-item aside-flex-container">
+            <a href="">Link 1</a>
+            <a href="">Link 2</a>
+            <a href="">Link 3</a>
+        </div>
+        <div class="area main-grid-item main-flex-container">
+
+            <div class="container-busca">
+                <div>Buscar:</div>
+                <input type="text" name="" id="nome_pokemon">
+                <button onclick="buscarPersonagem()">Buscar</button>
+            </div>
+
+
+            <div class="pokedex">
+                <div class="visor">
+                    <img id="imagem_personagem" src="" alt="">
+                </div>
+                <ul class="infos-pokemon-nome">
+                    <li id="nome"></li>
+                </ul>
+
+                <div class="botoes">
+                    <span id="id"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="area footer-grid-item"></div>
     </div>
+
 </body>
-<script>
-    
-const pokemon = ()=>{
-    const nome = document.getElementById("Nome").value ;
-      $.ajax({
-        url: `https://pokeapi.co/api/v2/pokemon/${nome}`,
-        type:"get",
-        success: function(result){
-            console.log(result)
-            if(result.sprites){ 
-                document.getElementById("pokemon").style.display = "block";
-            }
-            document.getElementById('imagem_personagem').src = result.sprites.back_default
-            document.getElementById('nome').innerHTML = result.species.name
-            document.getElementById('id').innerHTML = result.id
-        }
-    })
-
-}
-
-</script>
-
-<style>
-    .pokemon{
-    border: 10px solid red;
-    width: 30%;
-    border-radius: 1rem;
-    padding: 1rem;
-    margin-top: 1rem;
-    position: relative;
-    text-align: center;
-    }
-    #nome{
-    border: 1px solid;
-    border-radius: 1rem;
-    padding: 0.5rem;
-    text-transform: capitalize;
-    background: #0000ff5c;
-    color: #FFF;
-    }
-    #id{
-    background: blue;
-    width: 10%;
-    bottom: -3%;
-    right: 0;
-    position: absolute;
-    border-radius: 100%;
-    color: white;
-    font-weight: bold;}
-    
-    #imagem_personagem{
-        width: 200px;
-        height: 200px;
-        box-shadow: 9px 3px 11px rgb(216 33 33 / 77%);
-    }
-    .pokemon{
-        display: none;
-    }
-    button{
-        background: red;
-    color: #fff;
-    border-color: red;
-    }
-    button:hover{
-        background: blue;
-    color: #fff;
-    border-color: blue;
-    }
-</style>
 
 </html>
+
+<script>
+
+
+    function buscarPersonagem() {
+
+        const idPersonagem = document.getElementById("nome_pokemon").value
+
+
+        $.ajax({
+            url: `https://pokeapi.co/api/v2/pokemon/${idPersonagem}`,
+            type: "get",
+            success: function (result) {
+                console.log(result)
+
+                document.getElementById('imagem_personagem').src = result.sprites.back_default
+                document.getElementById('nome').innerHTML = result.species.name
+                document.getElementById('id').innerHTML = result.id
+
+            }
+        });
+    }
+
+</script>
+<style>
+    /*Reset */
+    html,
+    body {
+        margin: 0px;
+    }
+
+    ul {
+        text-align: center;
+        padding: 0;
+    }
+
+    /* Layout */
+    #site-grid-container {
+        background-color: rgb(39, 132, 214);
+        height: 100vh;
+
+        display: grid;
+
+        grid-template-rows: 0.2fr 1fr 0.2fr;
+        grid-template-columns: 0.3fr 1fr;
+        grid-template-areas:
+            "header header"
+            "aside main"
+            "footer footer";
+    }
+
+    .visor img {
+        width: 100%;
+    }
+
+    ul li {
+        display: block;
+    }
+
+    .area {
+        margin: 2px;
+        background-color: white;
+
+    }
+
+    .header-grid-item {
+        grid-area: header;
+        background-color: rgb(46, 44, 44);
+    }
+
+    .aside-grid-item {
+        grid-area: aside;
+        background-color: blanchedalmond;
+    }
+
+    .main-grid-item {
+        grid-area: main;
+        background-color: rgb(208, 201, 247);
+    }
+
+    .footer-grid-item {
+        grid-area: footer;
+        background-color: rgb(46, 44, 44);
+    }
+
+    /*Areas */
+    .asside-flex-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main-flex-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .container-busca {
+        border: solid black 2px;
+        border-radius: 10px;
+        margin-right: 2px;
+        padding: 2px 10px 10px 10px;
+    }
+
+    .pokedex {
+        background-color: rgb(221, 116, 165);
+
+        border: solid blue 2px;
+        height: 240px;
+        width: 180px;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .area.aside-grid-item.aside-flex-container a {
+        display: block;
+        margin: 0.5rem auto;
+    }
+
+    .infos-pokemon-nome {
+        border: 1px solid rgb(6, 6, 122);
+        width: 80%;
+        border-radius: 1rem;
+        background-color: blue;
+    }
+
+    .infos-pokemon-nome li {
+        color: #fff;
+    }
+
+    .visor {
+        margin-top: 10px;
+        height: 90px;
+        width: 90px;
+        background-color: #FFF;
+        border: solid white 10px;
+        border-radius: 10px;
+    }
+
+    .visor img {
+        box-shadow: 5px 1px 11px rgb(216 33 33 / 77%);
+
+
+    }
+
+    #nome_pokemon {
+        width: 100px;
+        border-radius: 10px;
+    }
+
+    .botoes {
+        background-color: rgb(72, 27, 233);
+        text-align: center;
+        width: 2rem;
+        border-radius: 100%;
+        border: solid white 3px;
+    }
+
+    .botoes span {
+        font-size: 1rem;
+    }
+</style>
