Projeto_DWI_Neiva Pronto

--- a/rickMorty.html
+++ b/rickMorty.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <title>Projeto_Poke_API</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <title>Rick and Marty API</title>
 </head>
 
 <body>
@@ -22,27 +20,24 @@
                 <a href="rickMorty.html"> rickandmortyapi</a>
                 <a href="">Link </a>
             </nav>
+
         </div>
         <div class="area principal-grid-item principal-flex-container">
 
-            <div class="container-busca">
-                <div>Buscar:</div>
-                <input type="text" name="" id="nome_pokemon">
+            <div class="card_busca">
+                <input id="id_personagem" type="number">
                 <button onclick="buscarPersonagem()">Buscar</button>
             </div>
 
-
-            <div class="pokedex">
-                <div class="visor">
-                    <img id="imagem_personagem" src="" alt="">
-                </div>
-                <ul class="infos-pokemon-nome">
-                    <li id="nome"></li>
+            <div class="card-personagem">
+                <div id="nome"></div>
+                <img width="120px" id="imagem_personagem" src="" alt="">
+                <ul>
+                    <li id="status"></li>
+                    <li id="especie"></li>
+                    <li id="tipo"></li>
+                    <li id="sexo"></li>
                 </ul>
-
-                <div class="botoes">
-                    <span id="id"></span>
-                </div>
             </div>
         </div>
 
@@ -50,7 +45,6 @@
             <p> NEIVA &REG; - 2022</p>
         </div>
     </div>
-
 </body>
 
 </html>
@@ -60,57 +54,34 @@
 
     function buscarPersonagem() {
 
-        const idPersonagem = document.getElementById("nome_pokemon").value
+        const idPersonagem = document.getElementById("id_personagem").value
 
 
         $.ajax({
-            url: `https://pokeapi.co/api/v2/pokemon/${idPersonagem}`,
+            url: "https://rickandmortyapi.com/api/character/" + idPersonagem,
             type: "get",
             success: function (result) {
                 console.log(result)
 
-                document.getElementById('imagem_personagem').src = result.sprites.back_default
-                document.getElementById('nome').innerHTML = result.species.name
-                document.getElementById('id').innerHTML = result.id
-
+                document.getElementById("imagem_personagem").src = result.image
+                document.getElementById("nome").innerHTML = result.name
+                document.getElementById("status").innerHTML = result.status
+                document.getElementById("especie").innerHTML = result.species
+                document.getElementById("tipo").innerHTML = result.type
+                document.getElementById("sexo").innerHTML = result.gender
             }
         });
     }
 
 </script>
 <style>
+    style>
+
     /*Reset */
     html,
     body {
         margin: 0px;
     }
-
-    ul {
-        text-align: center;
-        padding: 0;
-    }
-
-    .area.rodape-grid-item,
-    .area.cabecalho-grid-item {
-        position: relative;
-    }
-
-    .area.cabecalho-grid-item p {
-        position: absolute;
-        top: 3rem;
-        width: 100%;
-        text-align: center;
-        color: #FFF;
-    }
-
-    .area.rodape-grid-item p {
-        position: absolute;
-        top: 3rem;
-        width: 100%;
-        text-align: center;
-        color: #FFF;
-    }
-
 
     /* Layout */
     #site-grid-container {
@@ -127,8 +98,23 @@
             "rodape rodape";
     }
 
-    .visor img {
+    .area.rodape-grid-item,
+    .area.cabecalho-grid-item {
+        position: relative;
+    }
+
+    .area.cabecalho-grid-item p {
+        position: absolute;
+        top: 3rem;
         width: 100%;
+        text-align: center;
+    }
+
+    .area.rodape-grid-item p {
+        position: absolute;
+        top: 3rem;
+        width: 100%;
+        text-align: center;
     }
 
     ul li {
@@ -144,6 +130,8 @@
     .cabecalho-grid-item {
         grid-area: cabecalho;
         background-color: rgb(46, 44, 44);
+        color: aliceblue;
+        text-align: center;
     }
 
     .menu-grid-item {
@@ -159,6 +147,8 @@
     .rodape-grid-item {
         grid-area: rodape;
         background-color: rgb(46, 44, 44);
+        color: aliceblue;
+        text-align: center;
     }
 
     /*Areas */
@@ -180,63 +170,24 @@
         padding: 2px 10px 10px 10px;
     }
 
-    .pokedex {
-        background-color: rgb(221, 116, 165);
-
-        border: solid blue 2px;
-        height: 240px;
-        width: 180px;
-        border-radius: 10px;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
-
     .area.menu-grid-item.menu-flex-container a {
         display: block;
         margin: 0.5rem auto;
     }
 
-    .infos-pokemon-nome {
-        border: 1px solid rgb(6, 6, 122);
-        width: 80%;
-        border-radius: 1rem;
-        background-color: blue;
+    .card-personagem {
+        background-color: rgb(208, 208, 250);
+        border: solid blue 5px;
+        width: fit-content;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
 
-    .infos-pokemon-nome li {
-        color: #fff;
-    }
-
-    .visor {
-        margin-top: 10px;
-        height: 90px;
-        width: 90px;
-        background-color: #FFF;
-        border: solid white 10px;
-        border-radius: 10px;
-    }
-
-    .visor img {
-        box-shadow: 5px 1px 11px rgb(216 33 33 / 77%);
-
-
-    }
-
-    #nome_pokemon {
-        width: 100px;
-        border-radius: 10px;
-    }
-
-    .botoes {
-        background-color: rgb(72, 27, 233);
-        text-align: center;
-        width: 2rem;
-        border-radius: 100%;
-        border: solid white 3px;
-    }
-
-    .botoes span {
-        font-size: 1rem;
+    .card-busca {
+        background-color: rgb(208, 208, 250);
+        border: solid blue 2px;
+        width: fit-content;
+        margin-bottom: 10px;
     }
 </style>
